variables.RunFour.scala.error
Compilation error:
RunFour:2: error: not found: value &&
while (x != 4) && (isOverBaggle()==false) {
               ^